--- a/AR World Tracking/Base.lproj/Main.storyboard
+++ b/AR World Tracking/Base.lproj/Main.storyboard
@@ -21,11 +21,25 @@
                             <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O4z-HA-WLT">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </arscnView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C5D-2j-Lc4">
+                                <rect key="frame" x="20" y="567" width="80" height="80"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="2vx-81-zM0"/>
+                                    <constraint firstAttribute="height" constant="80" id="rxl-2M-Qwe"/>
+                                </constraints>
+                                <state key="normal" title="Add"/>
+                                <connections>
+                                    <action selector="add:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4TF-5O-EHS"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="O4z-HA-WLT" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="E6G-mt-Cd1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="C5D-2j-Lc4" secondAttribute="bottom" constant="20" id="PNu-Bo-jWW"/>
                             <constraint firstItem="O4z-HA-WLT" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="S6k-tM-ZQv"/>
+                            <constraint firstItem="C5D-2j-Lc4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="f9C-Mw-ejL"/>
                             <constraint firstItem="O4z-HA-WLT" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="uhI-ge-pM5"/>
                             <constraint firstItem="O4z-HA-WLT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="wQY-kp-WZy"/>
                         </constraints>
